--- a/HVAC_Controller_Final/HVAC_Controller.resx
+++ b/HVAC_Controller_Final/HVAC_Controller.resx
@@ -121,12 +121,18 @@
     <value>14, 13</value>
   </metadata>
   <metadata name="ClockTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>185, 15</value>
+    <value>154, 18</value>
   </metadata>
   <metadata name="TempTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>307, 13</value>
+    <value>276, 16</value>
   </metadata>
   <metadata name="FanTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>430, 12</value>
+    <value>399, 15</value>
+  </metadata>
+  <metadata name="DrawTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>507, 15</value>
+  </metadata>
+  <metadata name="PreasureTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>605, 15</value>
   </metadata>
 </root>
