Header and comments added

--- a/HVAC_Controller_Final/HVAC_Controller.resx
+++ b/HVAC_Controller_Final/HVAC_Controller.resx
@@ -132,7 +132,7 @@
   <metadata name="DrawTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>507, 15</value>
   </metadata>
-  <metadata name="PreasureTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="PressureTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>628, 14</value>
   </metadata>
 </root>
